--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,12 +41,38 @@ test:
     - ipython3 -h          # [py3k]
   imports:
     - IPython
+    - IPython
+    - IPython.core
+    - IPython.core.magics
+    - IPython.core.tests
+    - IPython.extensions
+    - IPython.extensions.tests
+    - IPython.external
+    - IPython.external.decorators
+    - IPython.lib
+    - IPython.lib.tests
+    - IPython.sphinxext
+    - IPython.terminal
+    - IPython.terminal.pt_inputhooks
+    - IPython.terminal.tests
+    - IPython.testing
+    - IPython.testing.plugin
+    - IPython.testing.tests
+    - IPython.utils
+    - IPython.utils.tests
 
 about:
   home: https://ipython.org/
   license: BSD 3-clause
   license_file: COPYING.rst
   summary: "IPython: Productive Interactive Computing"
+  home: http://ipython.org/
+  description: |
+    IPython provides a rich architecture for interactive computing with
+    a powerful interactive shell, a kernel for Jupyter, high performance
+    tools for parallel computing, and more.
+  doc_url: http://ipython.org/documentation.html
+  dev_url: https://github.com/ipython/ipython
 
 extra:
   recipe-maintainers:
