--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,15 +10,15 @@ source:
   sha256: afaa92343c20cf4296728161521d84f606d8817f963beaf7198e63dfede897fb
 
 build:
-  number: 0
+  number: 1
   script: python -m pip install --no-deps .
+  skip: True  # [not py2k]
   entry_points:
     - ipython = IPython:start_ipython
-    - ipython2 = IPython:start_ipython  # [py2k]
-    - ipython3 = IPython:start_ipython  # [py3k]
+    - ipython2 = IPython:start_ipython
 
 requirements:
-  build:
+  host:
     - python
     - pip
   run:
@@ -40,7 +40,6 @@ test:
   commands:
     - ipython -h
     - ipython2 -h          # [py2k]
-    - ipython3 -h          # [py3k]
   imports:
     - IPython
 
@@ -49,6 +48,13 @@ about:
   license: BSD 3-clause
   license_file: COPYING.rst
   summary: "IPython: Productive Interactive Computing"
+  home: http://ipython.org/
+  description: |
+    IPython provides a rich architecture for interactive computing with
+    a powerful interactive shell, a kernel for Jupyter, high performance
+    tools for parallel computing, and more.
+  doc_url: http://ipython.org/documentation.html
+  dev_url: https://github.com/ipython/ipython
 
 extra:
   recipe-maintainers:
