--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "5.4.1" %}
+{% set version = "5.5.0" %}
 
 package:
   name: ipython
@@ -7,14 +7,15 @@ package:
 source:
   fn: ipython-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/i/ipython/ipython-{{ version }}.tar.gz
-  sha256: afaa92343c20cf4296728161521d84f606d8817f963beaf7198e63dfede897fb
+  sha256: 66469e894d1f09d14a1f23b971a410af131daa9ad2a19922082e02e0ddfd150f
 
 build:
-  number: 2
+  number: 0
   script: python -m pip install --no-deps .
   entry_points:
     - ipython = IPython:start_ipython
-    - ipython2 = IPython:start_ipython
+    - ipython2 = IPython:start_ipython  # [py2k]
+    - ipython3 = IPython:start_ipython  # [py3k]
 
 requirements:
   host:
@@ -39,6 +40,7 @@ test:
   commands:
     - ipython -h
     - ipython2 -h          # [py2k]
+    - ipython3 -h          # [py3k]
   imports:
     - IPython
 
