Adding a patch I will revert immediately

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ source:
   fn: ipython-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/i/ipython/ipython-{{ version }}.tar.gz
   sha256: eca537aa61592aca2fef4adea12af8e42f5c335004dfa80c78caf80e8b525e5c
+  patches:
+    - bf676a5f1dde1f21bcd8e276ac21f6e2b86b661b.patch
 
 build:
   number: 1
