--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,8 +11,10 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ checksum }}
+  # Restoring pygments lexers is needed only for v8.7.0. 
+  # Check if it can be removed in the next release.
   patches:
-    {% if version == "8.7.0" %}- 0001-restore-pygments-lexers.patch{% endif %}
+    - 0001-restore-pygments-lexers.patch
 
 build:
   number: {{ build_number }}
