--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "ipython" %}
-{% set version = "8.6.0" %}
+{% set version = "8.7.0" %}
 {% set build_number = "0" %}
-{% set checksum = "7c959e3dedbf7ed81f9b9d8833df252c430610e2a4a6464ec13cd20975ce20a5" %}
+{% set checksum = "882899fe78d5417a0aa07f995db298fa28b58faeba2112d2e3a4c95fe14bb738" %}
 {% set migrating = false %}
 
 package:
@@ -11,6 +11,10 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ checksum }}
+  # Restoring pygments lexers is needed only for v8.7.0. 
+  # Check if it can be removed in the next release.
+  patches:
+    - 0001-restore-pygments-lexers.patch
 
 build:
   number: {{ build_number }}
@@ -29,6 +33,9 @@ build:
     - ipython3 = IPython:start_ipython
 
 requirements:
+  build:
+    - m2-patch  # [win]
+    - patch     # [not win]
   host:
     - pip
     - python
@@ -45,7 +52,7 @@ requirements:
     - matplotlib-inline >=0.1.2
     - pexpect >4.3  # [unix]
     - pickleshare
-    - prompt-toolkit >3.0.1,<3.1.0
+    - prompt-toolkit >3.0.11,<3.1.0
     - pygments >=2.4.0
     - stack_data
     - traitlets >=5
@@ -89,6 +96,7 @@ test:
     - IPython.utils.tests
   commands:
     - pip check
+    - pygmentize -L | grep ipython
     - ipython -h
     - ipython3 -h
 
