--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ requirements:
     - python
     - setuptools
     - wheel
+    - setuptools >=51.0.0
   run:
     - python
     - appnope   # [osx]
@@ -42,10 +43,10 @@ requirements:
     - decorator
     - jedi >=0.16
     # earlier versions depended on ipython
-    - matplotlib-inline >=0.1.2
+    - matplotlib-inline
     - pexpect >4.3  # [unix]
     - pickleshare
-    - prompt-toolkit >3.0.11,<3.1.0
+    - prompt-toolkit >3.0.30,<3.1.0
     - pygments >=2.4.0
     - stack_data
     - traitlets >=5
