--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,12 +56,11 @@ test:
     - pip
     {% if not migrating %}
     - black
-    - curio  # [unix]
+    - curio
     - matplotlib-base !=3.2.0
     - nbformat
     - numpy >=1.20
     - pandas
-    - pygments
     - pytest <7.1
     - pytest-asyncio
     - pytest-cov
