--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ build:
     - COV_THRESHOLD=72  # [win]
     - COV_THRESHOLD=73  # [(linux and not ppc64le) or osx]
     # 2022/4/1: Tests fail on ppc64le with total coverage: 63.63%
-    # - COV_THRESHOLD=63  # [linux and ppc64le]
+    - COV_THRESHOLD=63  # [linux and ppc64le]
   entry_points:
     - ipython = IPython:start_ipython
     - ipython3 = IPython:start_ipython
