lower test threshold for all platforms

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,12 +18,7 @@ build:
   skip: true  # [py<38]
   script_env:
     - MIGRATING={{ migrating }}
-    # TODO: investigate removing when some pypy/coverage speed issues are resolved
-    - IPYTHON_TESTING_TIMEOUT_SCALE=10
-    - COV_THRESHOLD=72  # [win]
-    - COV_THRESHOLD=73  # [(linux and not ppc64le) or osx]
-    # 2022/4/1: Tests fail on ppc64le with total coverage: 63.63%
-    - COV_THRESHOLD=50  # [linux and ppc64le]
+    - COV_THRESHOLD=50
   entry_points:
     - ipython = IPython:start_ipython
     - ipython3 = IPython:start_ipython
