--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,11 +30,12 @@ requirements:
     - wheel
   run:
     - python
+    - colorama  # [win]
     - decorator
     - exceptiongroup  # [py<311]
     - jedi >=0.16
     - matplotlib-inline
-    - pexpect >4.3
+    - pexpect >4.3  # [unix]
     - prompt_toolkit >=3.0.41,<3.1.0
     - pygments >=2.4.0
     - stack_data
