--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,8 @@ build:
   skip: true  # [py<310]
   script_env:
     - MIGRATING={{ migrating }}
-    # TODO: investigate removing when some pypy/coverage speed issues are resolved
-    - COV_THRESHOLD=50
+    - COV_THRESHOLD=71  # [unix]
+    - COV_THRESHOLD=70  # [win]
   entry_points:
     - ipython = IPython:start_ipython
     - ipython3 = IPython:start_ipython
@@ -45,7 +45,6 @@ test:
   requires:
     - pip
     {% if not migrating %}
-    #- black
     - curio
     - matplotlib-base !=3.2.0
     - nbformat
