--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,8 @@ build:
   skip: true  # [py<310]
   script_env:
     - MIGRATING={{ migrating }}
-    - COV_THRESHOLD=71  # [unix]
-    - COV_THRESHOLD=70  # [win]
+    # TODO: investigate removing when some pypy/coverage speed issues are resolved
+    - COV_THRESHOLD=50
   entry_points:
     - ipython = IPython:start_ipython
     - ipython3 = IPython:start_ipython
@@ -35,7 +35,7 @@ requirements:
     - exceptiongroup  # [py<311]
     - jedi >=0.16
     - matplotlib-inline
-    - pexpect >4.3  # [unix]
+    - pexpect >4.3
     - prompt_toolkit >=3.0.41,<3.1.0
     - pygments >=2.4.0
     - stack_data
