--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,14 +37,14 @@ requirements:
     - prompt_toolkit >=3.0.41,<3.1.0
     - pygments >=2.4.0
     - stack_data
-    - traitlets >=5
+    - traitlets >=5.13.0
+    - typing_extensions >=4.6 # [py<312]
 
 test:
   requires:
     - pip
     {% if not migrating %}
-    - pytest <7.1  # [py<312]
-    - pytest  # [py>=312]
+    - pytest
     - pytest-asyncio <0.22
     - testpath
     - pickleshare
@@ -53,11 +53,8 @@ test:
     - nbformat
     - numpy >=1.23
     - pandas
-    - pygments
-    - pytest-cov
     - trio
     {% endif %}
-
   commands:
     - pip check
     - pygmentize -L | grep ipython
