add export MIGRATING=false

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,6 +55,7 @@ test:
     - pygmentize -L | grep ipython
     - ipython -h
     - ipython3 -h
+    - export MIGRATING=false
 
 about:
   home: https://ipython.org
