--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: cb0a405a306d2995a5cbb9901894d240784a9f341394c6ba3f4fe8c6eb89ff6e
+  patches:
+    - patches/Fix_pdb_issues_in_Python_3.13.1.patch
 
 build:
   number: 0
@@ -18,6 +20,9 @@ build:
     - ipython3 = IPython:start_ipython
 
 requirements:
+  build:
+    - patch     # [not win]
+    - m2-patch  # [win]
   host:
     - pip
     - python !=3.13.1
